[package]
name = "cch23-yorip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = "1.26.0"
