[package]
name = "cch23-yorip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
chrono = "0.4.31"
htmlentity = "1.3.1"
image = "0.24.7"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_ws = "0.1.0"
serde = "1.0.193"
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-rocket = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tokio = "1.26.0"
ulid = "1.1.0"
uuid = { version = "1.6.1", features = ["v8"] }
